<resources>
    <string name="app_name">SweetMusic</string>
    <string name="search_title">Buscar</string>
    <string name="search_hint">Pesquisar músicas ou artistas</string>

    <string name="sobre_description_logo">Logo com a palavra Sweet Music em verde escuro entre headfones em verde claro</string>
    <string name="sobre_descricao_app">Suas músicas favoritas, para todos os gostos</string>
    <string name="sobre_relatar_bug">Relatar um problema</string>
    <string name="sobre_versao">Versão do aplicativo 1.0.0</string>
    <string name="title_activity_home">SweetMusic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="btnsalvar">Salvar</string>
    <string name="cadastro_email_invalido">Digite um e-mail válido</string>
    <string name="login_email_vazio">Digite um e-mail</string>
    <string name="perfil_nome_vazio">Digite um nome</string>
    <string name="forgot_email_nao_cadastrado">E-mail não cadastrado</string>
    <string name="cadastro_nome_vazio">Insira um nome de usuário</string>
    <string name="senha_numero_caracteres">Sua senha deve ter mais de 6 caracteres!</string>
    <string name="senha_nao_iguais">Sua senha deve ter mais de 6 caracteres!</string>

    <string name="relato_problema">Relato de problema</string>
    <string name="nosso_email">sweetmusic.app@gmail.com</string>
    <string name="enviar_email_via">Enviar e-mail via</string>
    <string name="link_wiki">https://github.com/sweetmusicapp/SweetMusic/wiki</string>
    <string name="nova_senha">Nova senha</string>
    <string name="confirmar_nova_senha">Confirmar nova senha</string>
    <string name="perfil_novo_email">Novo Email</string>
    <string name="perfil_novo_nome">Novo nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="alt_loginGoogle">Botão com o logo do Google para fazer login</string>
    <string name="alt_loginFacebook">Botão com o logo do Facebook para fazer login</string>
    <string name="criar_conta">Não tem uma conta?  Crie uma agora gratuitamente!</string>
    <string name="esqueci_minha_senha">Esqueci minha Senha</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="nome">Nome</string>
    <string name="registrar">Registrar</string>
    <string name="alt_registrarGoogle">Botão com o logo do Google para registrar</string>
    <string name="alt_registrarFacebook">Botão com o logo do Facebook para registrar</string>
    <string name="faca_login">Já tem uma conta?  Faça o login</string>
    <string name="ajuda">Ajuda</string>
    <string name="texto_confirmacao_nova_senha">Uma nova senha foi gerada e enviada para seu e-mail!</string>
    <string name="texto_confirmacao_inbox">Confira na sua caixa de entrada ou spam e faça o login novamente.</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="emailDefault">honorioproduction@gmail.com</string>
    <string name="alt_fotoPerfil">Foto do seu perfil</string>
    <string name="menu_inicio">Início</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alt_tocarvideo">Tocar vídeo</string>
    <string name="alt_desfavoritar">Desfavoritar</string>

    <string name="hintNomeTextInput">Nome</string>
    <string name="nomeUsuarioDefault">Diego Honorio</string>
    <string name="title_activity_detalhe">DetalheActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="detalhe_rhcp">Red Hot Chili Peppers é uma banda de rock dos Estados Unidos formada em Los Angeles, Califórnia, em 13 de fevereiro de 1983, considerada uma das maiores bandas da história do rock.</string>
    <string name="pesquisa_artista">Pesquise um artista \n para iniciar</string>
    <string name="teste_track_name">Teste teste teste teste teste teste</string>

    <string name="facebook_application_id" translatable="false">719915518518766</string>
    <string name="facebook_app_id">719915518518766</string>
    <string name="fb_login_protocol_scheme">fb719915518518766</string>
    <string name="login">Login</string>

</resources>
