<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/menu_inicio"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/nav_favoritos"
            android:title="@string/menu_favoritos"
            android:icon="@drawable/ic_favorite_black_24dp"/>
        <item
            android:id="@+id/nav_perfil"
            android:title="@string/menu_perfil"
            android:icon="@drawable/ic_person_black_24dp"/>



    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_principal"
                android:title="Principal"
                android:icon="@drawable/ic_inbox_black_24dp"/>
            <item
                android:id="@+id/nav_contato"
                android:title="Contato"
                android:icon="@drawable/ic_email_black_24dp"/>
            <item
                android:id="@+id/nav_sobre"
                android:title="Sobre"
                android:icon="@drawable/ic_info_black_24dp"/>

            <item
                android:id="@+id/nav_sair"
                android:title="@string/menu_sair"
                android:icon="@drawable/ic_arrow_back_black_24dp"/>


        </menu>

    </item>
</menu>
