<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SobreActivity">

    <ImageView
        android:id="@+id/imageView_sobre_logo"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/sobre_description_logo"
        android:scaleType="centerInside"
        android:src="@drawable/logosweet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_sobre_descricaoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/sobre_descricao_app"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_sobre_logo" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/cinza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sobre_descricaoApp" />

    <TextView
        android:id="@+id/textView_sobre_ajuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:drawableEnd="@drawable/ic_open_in_new"
        android:drawableRight="@drawable/ic_open_in_new"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/ajuda"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView_sobre_reportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:drawableEnd="@drawable/ic_bug_report"
        android:drawableRight="@drawable/ic_bug_report"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/sobre_relatar_bug"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sobre_ajuda" />

    <TextView
        android:id="@+id/textView_sobre_versao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sobre_reportar" />

</androidx.constraintlayout.widget.ConstraintLayout>