<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.login.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sobre_description_logo"
            android:scaleType="centerInside"
            android:src="@drawable/logosweet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:nextFocusDown="@id/textInputLayout_login_senha" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_login_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_login_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:nextFocusDown="@id/button_login" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/switch_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layoutDirection="rtl"
            android:text="Lembrar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="316dp" />


        <Button

            android:id="@+id/button_login"
            android:layout_width="362dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="40dp"
            android:paddingTop="16dp"
            android:paddingRight="40dp"
            android:paddingBottom="16dp"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="@string/entrar"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/btn_login_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_login_senha"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_google"
            android:layout_width="365dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

        </com.google.android.gms.common.SignInButton>

        <Button
            android:id="@+id/btn_login_facebook"
            android:layout_width="362dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_background_gradient"
            android:text="Login com Facebook"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toTopOf="@+id/textViewGotoRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/esqueci_a_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="35dp"
            android:text="@string/esqueci_minha_senha"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_login_senha" />

        <Button
            android:id="@+id/textViewGotoRegister"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="362dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="Registrar-se"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>